2010-08-12 Removed all traces of numerix module after 17 months of
           deprecation warnings. - EF

2010-08-05 Added keyword arguments 'thetaunits' and 'runits' for polar
           plots.  Fixed PolarAxes so that when it set default
           Formatters, it marked them as such.  Fixed semilogx and
           semilogy to no longer blindly reset the ticker information
           on the non-log axis.  Axes.arrow can now accept unitized
           data. - JRE

2010-08-03 Add support for MPLSETUPCFG variable for custom setup.cfg
           filename.  Used by sage buildbot to build an mpl w/ no gui
           support - JDH

2010-08-01 Create directory specified by MPLCONFIGDIR if it does
           not exist. - ADS

2010-07-20 Return Qt4's default cursor when leaving the canvas - DSD

2010-07-06 Tagging for mpl 1.0 at r8502


2010-07-05 Added Ben Root's patch to put 3D plots in arbitrary axes,
           allowing you to mix 3d and 2d in different axes/subplots or
           to have multiple 3D plots in one figure.  See
           examples/mplot3d/subplot3d_demo.py - JDH

2010-07-05 Preferred kwarg names in set_xlim are now 'left' and
           'right'; in set_ylim, 'bottom' and 'top'; original
           kwargs are still accepted without complaint. - EF

2010-07-05 TkAgg and FltkAgg backends are now consistent with other
           interactive backends: when used in scripts from the
           command line (not from ipython -pylab), show blocks,
           and can be called more than once. - EF

2010-07-02 Modified CXX/WrapPython.h to fix "swab bug" on solaris so
           mpl can compile on Solaris with CXX6 in the trunk.  Closes
           tracker bug 3022815 - JDH

2010-06-30 Added autoscale convenience method and corresponding
           pyplot function for simplified control of autoscaling;
           and changed axis, set_xlim, and set_ylim so that by
           default, they turn off the autoscaling on the relevent